# systematicstools-old

./: CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt
cmake/Templates/: setup.systematicstools.sh.in  systematicstoolsConfig.cmake.in
doc/: ExampleSystProvider.md  MovingParts.md  ToolConfiguration.md  WritingAProvider.md  systematicstools.doxyfile
fcl/: ExampleISystProvider_tool.Headers.fcl
larsyst/: CMakeLists.txt
larsyst/app/: CMakeLists.txt  CheckSystProviderConfigmd5.cc  GenerateSystProviderConfig.cc
larsyst/artless/: CMakeLists.txt
larsyst/doc/: glossary.md  larsyst.md
larsyst/fcl/: ExampleGeneratedMetaData.fcl  ExampleGeneratedMetaData_correlated_multisim.fcl  ExampleGeneratedMetaData_multisim.fcl  ExampleGeneratedMetaData_splineable.fcl  ExampleLArSystAnalyzer.fcl  ExampleLArSystCorrelatedMetaProvider.fcl  ExampleLArSystProducer.fcl  ExampleLArSystProviders.fcl  ExampleLArSyst_SystSetConfigure.fcl  ExampleLArSyst_analyze.fcl  ExampleLArSyst_produce.fcl  ExampleLArSyst_produce_analyze_correlatedmultisim.fcl  ExampleLArSyst_produce_analyze_splineable.fcl  ExampleParameterHeaders.fcl  ExampleToolConfig.fcl  larsyst.fcl
larsyst/interface/: CMakeLists.txt  EventResponse_product.cc  EventResponse_product.hh  EventResponse_product.hxx  ISystProvider.cxx  ISystProvider.hxx  ISystProvider_tool.cc  ISystProvider_tool.hh  ParamResponses.hh  SystMetaData.cc  SystMetaData.hh  SystMetaData_product.hxx  SystParamHeader.cc  SystParamHeader.hh  classes.h  classes_def.xml  types.hh  validation.hh
larsyst/interpreters/: CMakeLists.txt  EventSplineCacheHelper.hh  ParamHeaderHelper.cc  ParamHeaderHelper.hh  ParamValidationAndErrorResponse.cc  ParamValidationAndErrorResponse.hh  load_parameter_headers.cc  load_parameter_headers.hh  validate_SystMetaData.cc  validate_SystMetaData.hh  validate_SystParamHeader.cc  validate_SystParamHeader.hh
larsyst/module/: CMakeLists.txt  LArSystEventResponse_module.cc  LArSystResponseTreeMaker_module.cc  LarSystMetaData_plugin.cc  classes.h  classes_def.xml
larsyst/syst_providers/: CMakeLists.txt  NuInteractSyst_CoulombCorrection.cxx
larsyst/systproviders/: CMakeLists.txt  CorrelatedMultisimProvider_tool.cc  ExampleISystProvider_tool.cc  ExampleISystProvider_tool.hh  ExampleLArSystProvider_tool.cc
larsyst/utility/: CMakeLists.txt  CovMatThrower.cc  CovMatThrower.hh  FHiCLSystParamHeaderConverters.cc  FHiCLSystParamHeaderConverters.hh  FHiCLSystParamHeaderUtility.cc  FHiCLSystParamHeaderUtility.hh  ParameterAndProviderConfigurationUtility.cc  ParameterAndProviderConfigurationUtility.hh  ROOTUtility.hh  ResponselessParamUtility.cc  ResponselessParamUtility.hh  append_event_response.cc  append_event_response.hh  build_parameter_set_from_header.cc  build_parameter_set_from_header.hh  configure_syst_providers.cc  configure_syst_providers.hh  exceptions.hh  extend_SystMetaData.cc  extend_SystMetaData.hh  generate_provider_parameter_set.cc  generate_provider_parameter_set.hh  md5.cc  md5.hh  printers.hh  scrub_unity_responses.hh  string_parsers.hh
src/systematicstools/: CMakeLists.txt
src/systematicstools/interface/: CMakeLists.txt  EventResponse_product.hh  FHiCLSystParamHeaderConverters.cc  FHiCLSystParamHeaderConverters.hh  ISystProviderTool.cc  ISystProviderTool.hh  SystMetaData.hh  SystParamHeader.cc  SystParamHeader.hh  types.hh
src/systematicstools/interpreters/: CMakeLists.txt  EventSplineCacheHelper.hh  ParamHeaderHelper.hh  ParamValidationAndErrorResponse.cc  ParamValidationAndErrorResponse.hh  PolyResponse.hh  PrecalculatedResponseReader.hh
src/systematicstools/systproviders/: CMakeLists.txt  CorrelatedMultisimProvider_tool.cc  ExampleISystProvider_tool.cc  ExampleISystProvider_tool.hh
src/systematicstools/utility/: CMakeLists.txt  CovMatThrower.hh  FHiCLSystParamHeaderUtility.cc  FHiCLSystParamHeaderUtility.hh  ParameterAndProviderConfigurationUtility.cc  ParameterAndProviderConfigurationUtility.hh  ROOTUtility.hh  ResponselessParamUtility.cc  ResponselessParamUtility.hh  exceptions.hh  md5.cc  md5.hh  printers.hh  string_parsers.hh
systematicstools/: CMakeLists.txt
systematicstools/app/: CMakeLists.txt  CheckSystProviderConfigmd5.cc  DumpSystToolsParameters.cc  FindISystProvider.cc  GenerateSystProviderConfig.cc
systematicstools/artless/: CMakeLists.txt  setup.sh.in  systematicstoolsConfig.cmake
systematicstools/artless/cmake/Modules/: systematicstoolsDependencies.cmake
systematicstools/doc/: ExampleSystProvider.md  ISystProviderTool.md  MovingParts.md  ParameterHeaders.md  WritingAProvider.md  glossary.md  systematicstools.md
systematicstools/fcl/: ExampleISystProvider_tool.Config.fcl  ExampleParameterHeaders.fcl  ExampleToolConfig.fcl
systematicstools/interface/: CMakeLists.txt  EventResponse_product.cc  EventResponse_product.hh  FHiCLSystParamHeaderConverters.cc  FHiCLSystParamHeaderConverters.hh  ISystProviderTool.cc  ISystProviderTool.hh  ISystProvider_tool.cc  ISystProvider_tool.hh  SystMetaData.cc  SystMetaData.hh  SystParamHeader.cc  SystParamHeader.hh  types.hh
systematicstools/interpreters/: CMakeLists.txt  EventSplineCacheHelper.hh  ParamHeaderHelper.cc  ParamHeaderHelper.hh  ParamValidationAndErrorResponse.cc  PolyResponse.hh  PrecalculatedResponseReader.hh
systematicstools/module/: CMakeLists.txt  SystToolsEventResponse_module.cc  SystToolsResponseTreeMaker_module.cc  classes.h  classes_def.xml
systematicstools/systproviders/: CMakeLists.txt  CorrelatedMultisimProvider_tool.cc  ExampleISystProvider_tool.cc  ExampleISystProvider_tool.hh
systematicstools/utility/: CMakeLists.txt  CovMatThrower.hh  FHiCLSystParamHeaderUtility.cc  FHiCLSystParamHeaderUtility.hh  ParameterAndProviderConfigurationUtility.cc  ParameterAndProviderConfigurationUtility.hh  ROOTUtility.hh  ResponselessParamUtility.cc  ResponselessParamUtility.hh  exceptions.hh  md5.cc  md5.hh  printers.hh  string_parsers.hh
ups/: product_deps
