#add_subdirectory(app)
add_subdirectory(utility)
add_subdirectory(interface)
add_subdirectory(interpreters)
#add_subdirectory(module)
#add_subdirectory(systproviders)
#add_subdirectory(fcl)

#SET(SYSTTOOLS_LIBS
#  systematicstools_interface
#  systematicstools_interpreters
#  systematicstools_utility PARENT_SCOPE)
